css/application.css
html {
  margin: -8px -8px 0 -8px;
}

body {
  margin: 0;
}

li {
  list-style-type: none;
}

.social a, .portfolio a, .about a, .work a, .nameDiv a {
  transition: all 0.3s ease;
  text-decoration: none;
}

.social a:hover, .portfolio a:hover, .about a:hover, .work a:hover, .nameDiv a:hover {
  color: #2287B5;
  text-decoration: none;
}


  /*Sidebar Elements*/

.myName {
  color: #333333;
  font-family: 'Raleway', sans-serif;
  font-size: 50px;
  padding-bottom:
}

.nameDiv {
  text-align: center;
  margin-bottom: 15px;
  padding-top: 15px;
}

.nameDiv img {
  height: 125px;
  border-radius: 100px;
  margin-top: 10px;
}

#hamburger {
  color: #333333;
  margin-left: 43%;;
}

#hamburger:hover {
  cursor: pointer;
}

.sidebar {
  float: left;
  /*background-size: contain;*/
  /*background-repeat: no-repeat;*/
  background-color: #7f8c8d;
  width: 23%;
  position: fixed;
  height: 100%;
  padding: 10px 20px 0 20px;
  font-family: 'Raleway', sans-serif;
  overflow: scroll;
  border: 0;
}

.sidebar a{
  text-decoration: none;
}
.sidebar_image {
  position: absolute;
}

.links  {
  font-size: 20px;
  text-align: center;
  margin-left: -43px;
}

.clearBoth {
  clear: both;
}

a:link, a:visited, a:active, h1:hover {
  color: #333333;
}

.main a:hover, .sidebar a:hover {
   text-decoration: none;
}

#the_more_div {
  display: none;
}

.links li {
  transition: all 0.3s ease;
  padding: 10px;
}

.links li:hover {
  background-color: #ecf0f1;
  text-decoration: none;
}

.links li.current {
  background-color: #ecf0f1;
}

.social li {
  transition: background-color 0.3s ease;
  display: inline-block;
  margin: 5%;
}

.social a:hover {
  color: #2287B5;
}


/*content elements*/

#because {
  width: 100%;
  margin-left: 14%;
  margin-bottom: 0;
  letter-spacing: 15px;
  color: #333333;
  font-family: 'Domine';
  font-size: 120px;
  text-shadow: 0px 1px 1px #4d4d4d;
}

#laptop_div {
  margin: 0 0 0 38%;
  background-color: none;
  position: relative;
  color: #333333
}

#main {
  width: 68%;
  float: right;
  /*position: absolute;*/
  background-color: #408AD2;
  margin-left: 0%;
  padding: 10px 50px 20px 50px;
  font-family: 'Raleway';
  font-size: 22px;
  height: 700px;
  clear: both;
  overflow: hidden;
}

.portfolio, .about, .work {
  float: left;
  position: absolute;
  background-color: #408AD2;
  margin-left: 24%;
  padding: 25px 50px 20px 50px;
  font-family: 'Raleway';
  font-size: 22px;
}

.ga:hover {
  color: #c0392b;
}

.linedrop {
  margin-left: 20px;
}

.linedrop:hover {
  color: #2287B5;
  transition: background-color 0.3s ease;
}

@media (max-width: 460px) {

  .myName {
    font-size: 25px;
  }

  .sidebar {
    width: 100%;
    float: none;
  }

  .portfolio, .about, .work, .main {
    width: 100%;
  }

  #because {
    font-size: 35px;
  }

  #laptop_div {
    margin: -10px 0 0 20%;
    zoom: -25%;
  }
}

